# tauri-security-boilerplate

./: .cursor.rules  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION.md  INSTALLATION.md  LICENSE  MARKETING.md  README.md  RELEASE-CHECKLIST.md  SECURITY-MODEL.md  SECURITY.md  SETUP-INSTRUCTIONS.md  SHOWCASE.md  h  index.html  jest.config.js  move-files.ps1  move-files.sh  package-lock.json  package.json  push-to-github.ps1  push-to-github.sh  setup-git.ps1  setup-git.sh  tauri.conf.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BEST_PRACTICES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  README.md  SECURITY.md  index.html
docs/styles/: main.css
src/: App.tsx  DefaultErrorFallback.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  main.rs  tauri.conf.json
src-tauri/capabilities/: downloads-access.json  main.json
src-tauri/permissions/: dialog-allow-open.json  dialog-default.json  fs-default.json  fs-read-downloads.json  fs-read-pictures.json  fs-write-documents.json  fs-write-downloads.json  fs-write-pictures.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: memory_safe.rs  memory_safe_tests.rs  mod.rs
src/__tests__/security/: utilities.test.ts
src/components/: DefaultErrorFallback.tsx  ErrorBoundary.tsx  FileExplorer.tsx  SecurityUsage.tsx
src/components/common/: Button.test.tsx  Button.tsx  ErrorBoundary.tsx
src/components/feature/: FileExplorer.tsx
src/components/layout/: Layout.tsx
src/examples/: SecurityUsage.tsx
src/hooks/: useFileSystem.ts  useSecurityContext.ts
src/layouts/: MainLayout.tsx
src/pages/: HomePage.tsx  SecurityUsage.tsx
src/styles/: globals.css
src/utils/: typeConversion.ts
src/utils/api/: tauriApi.ts
src/utils/helpers/: pathHelpers.ts  validation.ts
src/utils/security/: capabilityValidator.ts  index.ts  resourceIntegrity.ts  safeFileHandling.ts  safeIpc.ts  safeNetworkRequests.ts  secureStorage.ts  securityHelpers.ts  securityLogger.ts  tauriApi.ts  utilities.ts
tauri-boilerplate/: CONTRIBUTING.md  INSTALLATION.md  MARKETING.md  README.md  SECURITY-CHECKLIST.md  package.json
tauri-boilerplate/scripts/: check_capabilities.py
tauri-boilerplate/src/: App.tsx  index.css
tauri-boilerplate/src-tauri/: Cargo.toml  tauri.conf.json
tauri-boilerplate/src-tauri/src/: main.rs
(+21 files in other folders)
